--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3983,6 +3983,7 @@ prometheus:
       # promoteResourceAttributes: []
       # keepIdentifyingResourceAttributes: false
       # translationStrategy: NoUTF8EscapingWithSuffixes
+      # convertHistogramsToNHCB: false
 
     ##
     serviceName:
