--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -298,7 +298,7 @@ spec:
           volumeMounts:
             - name: config-volume
               mountPath: /etc/config
-            - name: {{ ternary .Values.server.persistentVolume.statefulSetNameOverride "storage-volume" (and .Values.server.persistentVolume.enabled (not (empty .Values.server.persistentVolume.statefulSetNameOverride))) }}
+            - name: {{ ternary .Values.server.persistentVolume.statefulSetNameOverride "storage-volume" (and .Values.server.persistentVolume.enabled .Values.server.statefulSet.enabled (not (empty .Values.server.persistentVolume.statefulSetNameOverride))) }}
               mountPath: {{ .Values.server.persistentVolume.mountPath }}
               subPath: "{{ .Values.server.persistentVolume.subPath }}"
           {{- range .Values.server.extraHostPathMounts }}
@@ -437,12 +437,13 @@ spec:
 {{- if .Values.server.extraVolumes }}
 {{ toYaml .Values.server.extraVolumes | indent 8}}
 {{- end }}
-      {{- if not .Values.server.statefulSet.enabled }}
-        - name: {{ .Values.server.persistentVolume.statefulSetNameOverride | default "storage-volume" }}
-        {{- if .Values.server.persistentVolume.enabled }}
+        {{- if and .Values.server.persistentVolume.enabled (not .Values.server.statefulSet.enabled) }}
+        - name: "storage-volume"
           persistentVolumeClaim:
             claimName: {{ if .Values.server.persistentVolume.existingClaim }}{{ .Values.server.persistentVolume.existingClaim }}{{- else }}{{ template "prometheus.server.fullname" . }}{{- end }}
-        {{- else }}
+        {{- end }}
+        {{- if not .Values.server.persistentVolume.enabled }}
+        - name: "storage-volume"
           emptyDir:
           {{- if or .Values.server.emptyDir.sizeLimit .Values.server.emptyDir.medium }}
           {{- if .Values.server.emptyDir.medium }}
@@ -455,24 +456,23 @@ spec:
             {}
           {{- end -}}
         {{- end -}}
-      {{- end -}}
   {{- if and .Values.server.statefulSet.enabled .Values.server.persistentVolume.enabled }}
   volumeClaimTemplates:
     - apiVersion: v1
       kind: PersistentVolumeClaim
       metadata:
         name: {{ .Values.server.persistentVolume.statefulSetNameOverride | default "storage-volume" }}
-        {{- if .Values.server.persistentVolume.annotations }}
+        {{- with .Values.server.persistentVolume.annotations }}
         annotations:
-{{ toYaml .Values.server.persistentVolume.annotations | indent 10 }}
+          {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- if .Values.server.persistentVolume.labels }}
+        {{- with .Values.server.persistentVolume.labels }}
         labels:
-{{ toYaml .Values.server.persistentVolume.labels | indent 10 }}
+          {{- toYaml . | nindent 10 }}
         {{- end }}
       spec:
         accessModes:
-{{ toYaml .Values.server.persistentVolume.accessModes | indent 10 }}
+          {{- toYaml .Values.server.persistentVolume.accessModes | nindent 10 }}
         resources:
           requests:
             storage: "{{ .Values.server.persistentVolume.size }}"
