--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -29,6 +29,8 @@ automountServiceAccountToken: false
 serviceMonitor:
   # When set true then use a ServiceMonitor to configure scraping
   enabled: false
+  # Specify the API version for the ServiceMonitor
+  apiVersion: "monitoring.coreos.com/v1"
   # Set the namespace the ServiceMonitor should be deployed
   # namespace: monitoring
   # Set how frequently Prometheus should scrape
